# Nimbus-Inference

./: .cruft.json  .gitignore  .readthedocs.yaml  LICENSE  README.md  README.md.rej  pyproject.toml  pyproject.toml.rej
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build.yaml  ci.yaml  docs.yaml  pypi_publish.yaml  release.yaml  release_drafter.yaml  test.yaml
docs/: api.md  conf.py  contributing.md  index.rst
docs/notebooks/: example.ipynb
docs/tutorial/: getting_started.rst  installation.rst
src/nimbus_inference/: __init__.py  cell_analyzer.py  example_dataset.py  nimbus.py  trainer.py  unet.py  utils.py  viewer_widget.py
src/nimbus_inference/assets/: resUnet_baseline_hickey_tonic_dec_mskc_mskp_2_channel_halfres_512_bs32.pt
templates/: 1_Nimbus_Predict.ipynb  1_Nimbus_Predict_OME.ipynb  2_Nimbus_Finetuning.ipynb  3_analyze_individual_cells.ipynb  3_interactive_viewer.ipynb  4_Generic_Cell_Clustering.ipynb  4_interactive_viewer.ipynb
tests/: test_basic.py  test_cell_analyzer.py  test_example_dataset.py  test_nimbus.py  test_trainer.py  test_utils.py  test_viewer_widget.py
